Cambios menores en los prácticos

--- a/2021-1/practicos/Practico3.tex
+++ b/2021-1/practicos/Practico3.tex
@@ -78,17 +78,8 @@
 
 
 \item Hallar el cociente y el resto de la división de:
+\
 
-\begin{multicols}{3}
-\begin{enumerate}
-  \item $135$ por $23$,
-    \item $-135$ por $23$,
-    \item $135$ por $-23$,
-  \item $-135$ por $-23$,
-    \item $127$ por $99$,
-    \item $98$ por $73$.
-\end{enumerate}
-\end{multicols}
 
 
 \item 
@@ -101,30 +92,54 @@
 \item Dado $m\in \mathbb N$ hallar los restos posibles de $m^2$ y $m^3$ en la división por $3,4,5,7,8, 11$.
 
 \item Expresar en base 10 los siguientes enteros:
-\begin{multicols}{3}
 \begin{enumerate}
+  \begin{minipage}{0.25 \textwidth}
     \item $(1503)_6$ 
+  \end{minipage}
+  \begin{minipage}{0.25 \textwidth}
     \item $(1111)_2$ 
+  \end{minipage}
+  \begin{minipage}{0.25 \textwidth}
     \item $(1111)_{12}$
-    \item $(123)_4$ 
-    \item $(12121)_3$
-    \item $(1111)_5$
-\end{enumerate}
-\end{multicols}
+  \end{minipage}
 
+  \begin{minipage}{0.25 \textwidth}
+    \item $(123)_4$ 
+  \end{minipage}
+  \begin{minipage}{0.25 \textwidth}
+    \item $(12121)_3$
+  \end{minipage}
+  \begin{minipage}{0.25 \textwidth}
+    \item $(1111)_5$
+  \end{minipage}
+\end{enumerate}
 
 \item Convertir
-\begin{multicols}{2}
 \begin{enumerate}
+  \begin{minipage}{0.40 \textwidth}
     \item  $(133)_4$ a base 8,
+  \end{minipage}
+  \begin{minipage}{0.40 \textwidth}
     \item  $(B38)_{16}$ a base 8,
+  \end{minipage}
+
+  \begin{minipage}{0.40 \textwidth}
     \item  $(3506)_7$ a base 2,
-    \item  $(1541)_6$ a base 4.
+  \end{minipage}
+  \begin{minipage}{0.40 \textwidth}
+    \item  $(1541)_6$ a base 4.  
+  \end{minipage}
 \end{enumerate}
-\end{multicols}
 
-
-\item Calcular: a) $(2234)_5+(2310)_5$ \qquad \qquad b)$(10101101)_2+(10011)_2$.
+\item Calcular:
+\begin{enumerate}
+  \begin{minipage}{0.40 \textwidth}
+    \item  $(2234)_5+(2310)_5$,
+  \end{minipage}
+  \begin{minipage}{0.40 \textwidth}
+    \item $(10101101)_2+(10011)_2$.
+  \end{minipage}
+\end{enumerate}
 
 
 \item Sean $a$, $b$, $c \in {\mathbb Z}$. Demostrar las siguientes afirmaciones:
