--- a/2021-1/practicos/Practico2.tex
+++ b/2021-1/practicos/Practico2.tex
@@ -59,6 +59,8 @@
 %\setlength{\parindent}{0,7cm}% tamaño de sangria.
 \setlength{\parskip}{0,4cm} % separación entre parrafos.
 \renewcommand{\baselinestretch}{0.90}% separacion del interlineado
+\setlist[1]{topsep=8pt,itemsep=.4cm,partopsep=4pt, parsep=4pt} %espacios nivel 1 listas
+\setlist[2]{itemsep=.15cm}  %espacios nivel 2 listas
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\end{comment}
 %%% FIN FORMATOS  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -198,11 +200,7 @@
 
 
 
-
-\begin{center}
-    \textbf{\large \S\, Ejercicios adicionales (para repasar)}
-\end{center}
-
+\subsection*{$\S$  Ejercicios de repaso}
 
 \begin{enumerate}[resume]
 
@@ -218,9 +216,7 @@ de tal forma que cada hombre aparezca al lado de su esposa?
 \item ¿De cuántas formas pueden distribuirse $14$ libros distintos entre dos
 personas de manera tal que cada persona reciba al menos $3$ libros?
 
-
-\item
-Cecilia ha olvidado la contraseña de su correo electrónico, la cual est\'a formada por $11$ caracteres: $4$ d\'igitos y $7$ letras todos mezclados. ?`Cu\'al es el m\'aximo n\'umero de intentos que deber\'ia probar para entrar a su correo si:
+\item Cecilia ha olvidado la contraseña de su correo electrónico, la cual est\'a formada por $11$ caracteres: $4$ d\'igitos y $7$ letras todos mezclados. ?`Cu\'al es el m\'aximo n\'umero de intentos que deber\'ia probar para entrar a su correo si:
 \begin{enumerate}
     \item  tiene en cuenta que hay 26 letras?
     
@@ -229,6 +225,9 @@ Cecilia ha olvidado la contraseña de su correo electrónico, la cual est\'a for
     \item  recuerda que ha formado la clave de la siguiente manera: los primeros siete caracteres son una mezcla de las letras de su nombre (CECILIA), y los \'ultimos cuatro caracteres son una permutaci\'on de las cuatro cifras de su a\~no de nacimiento (1998)?
 \end{enumerate}
 
+\item Se está arreglando la plaza principal de la ciudad. Leandro, el jardinero, ha calculado que
+necesita $6$ plantines para cada cantero rectangular. Él dispone de $4$ clases de plantines y quiere
+que en cada cantero haya, como mínimo, dos clases de plantines diferentes. ¿De cuántas maneras puede seleccionar los plantines a colocar en cada cantero? 
 
 \end{enumerate}
 \end{document}
