arrglo de formato en los prácticos

--- a/2021-1/practicos/Practico1.tex
+++ b/2021-1/practicos/Practico1.tex
@@ -142,13 +142,17 @@
 \end{enumerate}
 
 \item Dado un natural $m$, probar que $\forall n \in {\mathbb N} $; $x$, $y \in {\mathbb R}$, se cumple:
-\begin{multicols}{3}
- \begin{enumerate}
-  \item $x^n \cdot x^m = x^{n+m}$
+\begin{enumerate}
+\begin{minipage}{0.25 \textwidth}\item $x^n \cdot x^m = x^{n+m}$
+\end{minipage}
+\begin{minipage}{0.25 \textwidth}
 \item $(x\cdot y)^n=x^n\cdot y^n$
+\end{minipage}
+\begin{minipage}{0.25\textwidth}
 \item $(x^n)^m = x^{n\cdot m}$
- \end{enumerate}
-\end{multicols}
+\end{minipage}
+\end{enumerate}
+
 
 \item Analizar la validez de las siguientes afirmaciones:
  \begin{enumerate}
@@ -196,15 +200,22 @@ $$\begin{cases}
 Probar que $a_n=6^n + (-1)^{n+1}$ para todo $n\in \mathbb N_0$.
 
 \item Las siguientes proposiciones no son válidas para todo $n \in {\mathbb N}$. Indicar en qué paso del principio de inducción falla la demostración:
-\begin{multicols}{4}
 \begin{enumerate}
+\begin{minipage}{0.20 \textwidth}
 \item  $n=n^2$,
+\end{minipage}
+\begin{minipage}{0.20 \textwidth}
 \item  $n=n+1$,
+\end{minipage}
+\begin{minipage}{0.20 \textwidth}
 \item  $3^n = 3^{n+2}$,
+\end{minipage}
+\begin{minipage}{0.20 \textwidth}
 \item  $3^{3n} = 3^{n+2}$.
+\end{minipage}
 \end{enumerate}
-\end{multicols}
 \end{enumerate}
+
 \subsection*{$\S$ Ejercicios de repaso} Los ejercicios marcados con ${}^{(*)}$ son de mayor dificultad.
 
 \begin{enumerate}[resume]
