--- a/2021-1/practicos/Practico3.tex
+++ b/2021-1/practicos/Practico3.tex
@@ -224,17 +224,30 @@
 \item
 Calcular el máximo común divisor y expresarlo como combinación lineal de los
 números dados, para cada uno de  los siguientes pares de números:
-\begin{multicols}{3}
 \begin{enumerate}
+\begin{minipage}{0.25 \textwidth}
   \item  14 y 35, 
-    \item 11 y 15, 
+\end{minipage}
+\begin{minipage}{0.25 \textwidth}
+  \item 11 y 15, 
+\end{minipage}
+\begin{minipage}{0.25 \textwidth}
     \item 12 y 52,
-  \item 12 y $-52$,  
+\end{minipage}
+
+\begin{minipage}{0.25 \textwidth}
+  \item 12 y $-52$, 
+\end{minipage}
+\begin{minipage}{0.25 \textwidth} 
     \item 12 y 532,
-    \item 725 y 441,
-    \item 606 y 108.
+\end{minipage}
+\begin{minipage}{0.25 \textwidth}
+\item 725 y 441,
+\end{minipage}
+
+\begin{minipage}{0.25 \textwidth}
+\item 606 y 108.\end{minipage}
 \end{enumerate}
-\end{multicols}
 
 
 
@@ -295,15 +308,20 @@ $$p_{k+1}\leq p_1\cdot p_2\cdot \cdots \cdot p_k+1$$
 
 
 \item Calcular el máximo común divisor y el mínimo común múltiplo de los siguientes pares de números usando la descomposición en números primos. 
-\begin{multicols}{3}
     \begin{enumerate}
-        \item $a=12$ y $b=15$. 
-        \item$a=11$ y $b=13$.
-        \item $a=140$ y $b=150$.
-        \item $a=3^2 \cdot 5^2$ y $b=2^2 \cdot 11$.
-        \item $a=2^2 \cdot 3\cdot 5$ y $b=2\cdot 5\cdot 7$.
+    \begin{minipage}{0.40 \textwidth}
+        \item $a=12$ y $b=15$. \end{minipage}
+        \begin{minipage}{0.40 \textwidth}
+        \item$a=11$ y $b=13$.\end{minipage}
+        
+        \begin{minipage}{0.40 \textwidth}
+        \item $a=140$ y $b=150$.\end{minipage}
+        \begin{minipage}{0.40 \textwidth}
+        \item $a=3^2 \cdot 5^2$ y $b=2^2 \cdot 11$.\end{minipage}
+        
+        \begin{minipage}{0.40 \textwidth}
+        \item $a=2^2 \cdot 3\cdot 5$ y $b=2\cdot 5\cdot 7$.\end{minipage}
     \end{enumerate}
-\end{multicols}
 
 
 \end{enumerate}
