--- a/2021-1/practicos/Practico4.tex
+++ b/2021-1/practicos/Practico4.tex
@@ -119,35 +119,42 @@ $$a^2 + b^2 + c^2\equiv 0 \pmod 3.$$% es divisible por 3.
 \item $x=1^8 + 2^8 + 3^8 + 4^8 + 5^8 + 6^8 + 7^8 + 8^8$;
 \item $x=3\cdot 11\cdot 17\cdot 71\cdot 101$.
 \end{enumerate}
-%\end{multicols}
+
 
 \item Hallar todos los $x$ que satisfacen:
-\begin{multicols}{3}
  \begin{enumerate}
-  \item $x^2 \equiv 1\,\, (4)$
-\item  $x^2 \equiv x\,\, (12)$
-\item  $x^2 \equiv 2 \,\, (3)$
-\item  $x^2 \equiv 0\,\, (12$)
-\item  $x^4 \equiv 1 \,\, (16)$
-\item  $3x \equiv 1\,\, (5)$
+ \begin{minipage}{0.25 \textwidth}
+  \item $x^2 \equiv 1\,\, (4)$\end{minipage}
+  \begin{minipage}{0.25 \textwidth}
+\item  $x^2 \equiv x\,\, (12)$\end{minipage}
+\begin{minipage}{0.25 \textwidth}
+\item  $x^2 \equiv 2 \,\, (3)$\end{minipage}
+
+\begin{minipage}{0.25 \textwidth}
+\item  $x^2 \equiv 0\,\, (12$)\end{minipage}
+\begin{minipage}{0.25 \textwidth}
+\item  $x^4 \equiv 1 \,\, (16)$\end{minipage}
+\begin{minipage}{0.25 \textwidth}
+\item  $3x \equiv 1\,\, (5)$\end{minipage}
 %\item $2x\equiv 5\,\, (6)$
 %\item  $3x^3 \equiv 20\,\, (8)$.
  \end{enumerate}
-\end{multicols}
 
-%\item Sean $a$, $b$, $m \in {\mathbb Z}$, $d>0$ tales que  \,$d\mid a$,\,  \,$d\mid b$\, y \,$d\mid m$. Probar que la ecuaci\'on $a\cdot x \equiv b\,( m)$ tiene
-soluci\'on si y s\'olo si la ecuaci\'on
-\[ \frac{a}{d}\cdot x \equiv \frac{b}{d}\,\left(\frac{m}{d}\right)\]
-tiene soluci\'on.
+\item Sean $a$, $b$, $m \in {\mathbb Z}$, $d>0$ tales que  \,$d\mid a$,\,  \,$d\mid b$\, y \,$d\mid m$. Probar que la ecuación $a\cdot x \equiv b\,( m)$ tiene
+solución si y solo si la ecuación
+$$\frac{a}{d}\cdot x \equiv \frac{b}{d}\,\left(\frac{m}{d}\right)$$
+tiene solución.
 
 \item Resolver las siguientes ecuaciones:
-\begin{multicols}{3}
  \begin{enumerate}
-  \item $2x \equiv -21 \,\,\, (8)$
-\item $2x \equiv -12 \,\,\, (7)$
-\item $3x \equiv 5\,\,\, (4)$.
+  \begin{minipage}{0.25 \textwidth}
+  \item $2x \equiv -21 \,\,\, (8)$\end{minipage}
+  \begin{minipage}{0.25 \textwidth}
+\item $2x \equiv -12 \,\,\, (7)$\end{minipage}
+\begin{minipage}{0.25 \textwidth}
+\item $3x \equiv 5\,\,\, (4)$.\end{minipage}
  \end{enumerate}
-\end{multicols}
+
 
 \item Resolver la ecuaci\'on $221 x \equiv 85\,\, (340)$. Hallar todas las soluciones $x$ tales que $0 \le x < 340$.
 
