--- a/2021-1/practicos/Practico5.tex
+++ b/2021-1/practicos/Practico5.tex
@@ -111,16 +111,21 @@ $$
 
 
 \item Para cada una de las siguientes secuencias, encuentre un grafo que tenga exactamente las valencias indicadas o demuestre que tal grafo no existe:
-\begin{multicols}{3}
 \begin{enumerate}
-\item $3,3,1,1$
-\item $3,2,2,1$
-\item $3,3,2,2,1,1$
-\item $4,1,1,1,1$
-\item $7,3,3,3,2,2$
-\item $4,1,1,1$
+\begin{minipage}{0.25 \textwidth}
+\item $3,3,1,1$\end{minipage}
+\begin{minipage}{0.25 \textwidth}
+\item $3,2,2,1$\end{minipage}
+\begin{minipage}{0.25 \textwidth}
+\item $3,3,2,2,1,1$\end{minipage}
+
+\begin{minipage}{0.25 \textwidth}
+\item $4,1,1,1,1$\end{minipage}
+\begin{minipage}{0.25 \textwidth}
+\item $7,3,3,3,2,2$\end{minipage}
+\begin{minipage}{0.25 \textwidth}
+\item $4,1,1,1$\end{minipage}
 \end{enumerate}
-\end{multicols}
 
 
 \item Demuestre que los siguientes pares de grafos son isomorfos (encuentre un isomorfismo):
